2003-12-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink.info.in: Remove "make test" from branch_0_17
	* bootstrap.pl, inject.pl: backport changes from HEAD to branch_0_17

2003-11-19  Max Horn <max@quendi.de>

	* fink.info.in: Synced with regular fink.info file.

2003-11-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.1, a bugfix
	release on branch_0_17

2003-11-16  Max Horn <max@quendi.de>

	* fink.info.in, inject.pl: Automatically run the tests are part of
	  the CompileScript in fink.info.

2003-11-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* fink-virtual-pkgs.in: Make fink-virtual-pkgs print builddependsonly
	  packages on the command-line when not being called in "dpkg" or
	  "apt" mode (for debugging).
	* Makefile: added "commit" target, as well as adding the "test" target
	  as a dep for a few other targets.

2003-11-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.0

2003-11-11  Michael G Schwern <schwern@pobox.com

	* Makefile: tests were running against the installed version instead
	of the new version in the perlmod directory

2003-11-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.16.2, a bugfix
	release on the branch_0_16 branch

2003-11-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.16.1, a bugfix
	release on the branch_0_16 branch

2003-11-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in:  Further sanity checking on sources.list file:
	try to correct errors which might have been introduced when using
	dselect to modify sources.list in the recent past.

2003-11-04  Max Horn <max@quendi.de>

	* Makefile: Dummy Makefile so we can do "make test" to run the unit tests.

2003-11-04  Max Horn <max@quendi.de>

	* INSTALL*, README*, USAGE*: Updated to latest generated versions.